--- a/index.html
+++ b/index.html
@@ -4,30 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Your Name - Portfolio</title>
+    <title>ANCHAL- Portfolio</title>
 </head>
 <body>
 
     <header>
-        <div class="logo">Your Name</div>
-        <p class="tagline">Web Developer | Creative Thinker</p>
+        <div class="logo">ANCHAL BHOITE</div>
+        <p class="tagline">BTech Student | Aspiring Engineer</p>
     </header>
 
     <section id="about">
         <h2>About Me</h2>
         <img src="profile.jpg" alt="Your Name">
         <p>
-            Welcome to my portfolio! I am a passionate web developer with experience in creating
-            dynamic and user-friendly websites. I enjoy turning ideas into reality through code.
+            Welcome to my portfolio! I am  Anchal, a BTech student majoring in Computer Science & Engineering (Artificial Intelligence & Machine Learning)
+            I have a passion for Web development, and I'm dedicated to learning and applying my skills in the field of technology.
         </p>
     </section>
 
     <section id="skills">
         <h2>Skills</h2>
         <ul>
+            <li>C Programming<li>
             <li>HTML5</li>
             <li>CSS3</li>
             <li>JavaScript</li>
+            <li>Python<li>
+            <li>Java<li>
+            <li>Android Development<li>
             <li>React.js</li>
             <li>Responsive Design</li>
         </ul>
@@ -36,13 +40,15 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <img src="project1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>A brief description of Project 1 goes here.</p>
+            <a href="https://goalorientedfuture.github.io/project/">Click for project link</a>
+            <h3>Career Recommendation Website</h3>
+            <p>Build a Website(Goal Oriented Future) for 10th student to know their career path . Our platform is
+here to guide you every step of the way. Explore career options, get expert advice, access
+educational resources, and start shaping a bright future.</p>
         </div>
         <div class="project">
-            <img src="project2.jpg" alt="Project 2">
-            <h3>Project 2</h3>
+            <a href="https://www.homepage.com>Click for project link</a>
+            <h3></h3>
             <p>A brief description of Project 2 goes here.</p>
         </div>
     </section>
