--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <a href="https://goalorientedfuture.github.io/project/">Click for project link</a>
             <h3>Career Recommendation Website</h3>
             <p>Build a Website(Goal Oriented Future) for 10th student to know their career path . Our platform is
 here to guide you every step of the way. Explore career options, get expert advice, access
 educational resources, and start shaping a bright future.</p>
+            Website link<a href="https://goalorientedfuture.github.io/project/">WWW.GoalOreintedFuture</a>
         </div>
         <div class="project">
-            <a href="https://www.homepage.com>Click for project link</a>
+             Website link <a href="https://www.homepage.com>ww</a>
             <h3></h3>
             <p>A brief description of Project 2 goes here.</p>
         </div>
