--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>About Me</h2>
         <img src="profile.jpg" alt="Your Name">
         <p>
-            Welcome to my portfolio! I am  Anchal, a BTech student majoring in Computer Science & Engineering (Artificial Intelligence & Machine Learning)
+            Welcome to my portfolio! I am  Anchal, a BTech student majoring in Computer Science & Engineering (Artificial Intelligence & Machine Learning).
             I have a passion for Web development, and I'm dedicated to learning and applying my skills in the field of technology.
         </p>
     </section>
@@ -47,9 +47,12 @@ educational resources, and start shaping a bright future.</p>
             Website link<a href="https://goalorientedfuture.github.io/project/">WWW.GoalOreintedFuture</a>
         </div>
         <div class="project">
-             Website link <a href="https://www.homepage.com>ww</a>
-            <h3></h3>
-            <p>A brief description of Project 2 goes here.</p>
+            
+            <h3>Pizza Delicious Restaurant Website</h3>
+            <p>This project is a delightful online platform that showcases the offerings of our pizza restaurant,
+                where customers can explore our mouthwatering pizza menu, customize their orders, 
+                and learn more about our establishment..</p>
+            Website link <a href="https://anchalbhoite.github.io/Pizza-Restaurant/">WWW.PizzaDelicous</a>
         </div>
     </section>
 
@@ -60,12 +63,12 @@ educational resources, and start shaping a bright future.</p>
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: your.email@example.com</p>
-        <p>Phone: (123) 456-7890</p>
+        <p>Email: anchalbhoite@gmail.com</p>
+        <p>Phone: +91 9177235380</p>
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2023 Anchal. All rights reserved.</p>
     </footer>
 
 </body>
