--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ educational resources, and start shaping a bright future.</p>
 
     <section id="resume">
         <h2>Resume</h2>
-        <p>Download my resume <a href="resume.pdf.docx" target="_blank">here</a>.</p>
+        <p>Download my resume <a href="resume.pdf" target="_blank">here</a>.</p>
     </section>
 
     <section id="contact">
