--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 
     <section id="about">
         <h2>About Me</h2>
+        <div class="img">
+        
         <img src="profile.jpg" alt="Your Name">
         <p>
             Welcome to my portfolio! I am  Anchal, a BTech student majoring in Computer Science & Engineering (Artificial Intelligence & Machine Learning).
             I have a passion for Web development, and I'm dedicated to learning and applying my skills in the field of technology.
-        </p>
+        </p></div>div>
     </section>
 
     <section id="skills">
