--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <div class="img">
+        <div class="profile">
         
         <img src="profile.jpg" alt="Your Name">
         <p>
