--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <h2>About Me</h2>
         <div class="profile">
         
-        <img src="profile.jpg" alt="Your Name">
+        <img src="profile.jpg" alt="Your Name"></div>
         <p>
             Welcome to my portfolio! I am  Anchal, a BTech student majoring in Computer Science & Engineering (Artificial Intelligence & Machine Learning).
             I have a passion for Web development, and I'm dedicated to learning and applying my skills in the field of technology.
-        </p></div>div>
+        </p>
     </section>
 
     <section id="skills">
