--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </h1>
         <h2>- I'm a Btech Engineering student from Hyderabad.</h2>
         <a href="#">
-          <i class="fa fa-facebook"></i>
+          <i class="https://cdn-icons-png.flaticon.com/128/665/665209.png"></i>
         </a>
         <a href="#">
           <i class="fa fa-twitter"></i>
@@ -63,7 +63,7 @@
   <div class="container">
     <div class="footer-sect social-icon width-50">
       <a href="#">
-        <i class="fa fa-facebook"></i>
+        <i class="https://cdn-icons-png.flaticon.com/128/665/665209.png"></i>
       </a>
       <a href="#">
         <i class="fa fa-twitter"></i>
