--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <span class="span-col">Welcome To My Portfolio</span>
         <h1>Anchal <span class="span-col">Bhoite</span>
         </h1>
-        <h2>- I'm a Btech Engineering student from Hyderabad.</h2>
+        <h2>- I'm a Engineering Student pursuing B.Tech in Computer Science & Engineering (Artificial Intelligence & Machine Learning) .</h2>
         <a href="#">
           <i class="https://cdn-icons-png.flaticon.com/128/665/665209.png"></i>
         </a>
