--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
         </h1>
         <h2>- I'm a Engineering Student pursuing B.Tech in Computer Science & Engineering (Artificial Intelligence & Machine Learning) .</h2>
         <a href="#">
-          <i class="https://cdn-icons-png.flaticon.com/128/665/665209.png"></i>
+          <img src="https://cdn-icons-png.flaticon.com/128/2626/2626269.png">
         </a>
         <a href="#">
-          <i class="fa fa-twitter"></i>
+          <img src="https://cdn-icons-png.flaticon.com/128/1177/1177491.png">
         </a>
         <a href="www.linkedin.com/in/anchal-bhoite-692571260">
-          <i class="fa fa-linkedin"></i>
+          <img src="https://cdn-icons-png.flaticon.com/128/1384/1384072.png">
         </a>
         <a href="#">
-          <i class="fa fa-instagram"></i>
+          <img src="https://cdn-icons-png.flaticon.com/128/4923/4923005.png">
         </a>
         <a href="https://github.com/Anchalbhoite">
-          <i class="fa fa-github"></i>
+          <i class="https://cdn-icons-png.flaticon.com/128/2111/2111425.png"></i>
         </a>
       </div>
     </div>
@@ -63,7 +63,7 @@
   <div class="container">
     <div class="footer-sect social-icon width-50">
       <a href="#">
-        <i class="https://cdn-icons-png.flaticon.com/128/665/665209.png"></i>
+        <img src="https://cdn-icons-png.flaticon.com/128/665/665209.png">
       </a>
       <a href="#">
         <i class="fa fa-twitter"></i>
