--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <img src="https://cdn-icons-png.flaticon.com/128/665/665209.png">
       </a>
       <a href="#">
-        <i class="fa fa-twitter"></i>
+        <img src="https://cdn-icons-png.flaticon.com/128/10092/10092328.png">
+      </a>
+      <a href="www.linkedin.com/in/anchal-bhoite">
+        <img src="https://cdn-icons-png.flaticon.com/128/11376/11376363.png">
       </a>
       <a href="#">
-        <i class="fa fa-linkedin"></i>
-      </a>
-      <a href="#">
-        <i class="fa fa-instagram"></i>
+        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091784.png">
       </a>
     </div>
     <div class="footer-sect mt-20 width-50">CopyRight © 2023 Anchal Bhoite Website Template. All Rights Reserved</div>
