--- a/contact.html
+++ b/contact.html
@@ -50,23 +50,24 @@
       </div>
     </div>
   </div>
-  <div class="footer">
-    <div class="container">
-      <div class="footer-sect social-icon width-50">
-        <a href="#">
-          <i class="fa fa-facebook"></i>
-        </a>
-        <a href="#">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <a href="#">
-          <i class="fa fa-linkedin"></i>
-        </a>
-        <a href="#">
-          <i class="fa fa-instagram"></i>
-        </a>
-      </div>
-      <div class="footer-sect mt-20 width-50">CopyRight © 2023  Anchal Bhoite Template. All Rights Reserved</div>
+  <!------FOOTER SECTION------>
+<div class="footer">
+  <div class="container">
+    <div class="footer-sect social-icon width-50">
+      <a href="#">
+        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091734.png">
+      </a>
+      <a href="#">
+        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091904.png">
+      </a>
+      <a href="www.linkedin.com/in/anchal-bhoite">
+        <img src="https://cdn-icons-png.flaticon.com/128/11376/11376363.png">
+      </a>
+      <a href="#">
+        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091784.png">
+      </a>
     </div>
+    <div class="footer-sect mt-20 width-50">CopyRight © 2023 Anchal Bhoite Website Template. All Rights Reserved</div>
   </div>
+</div>
     
