--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <img src="https://cdn-icons-png.flaticon.com/128/4923/4923005.png">
         </a>
         <a href="https://github.com/Anchalbhoite">
-          <i class="https://cdn-icons-png.flaticon.com/128/2111/2111425.png"></i>
+          <img src="https://cdn-icons-png.flaticon.com/128/2111/2111425.png">
         </a>
       </div>
     </div>
