--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <a href="#">
           <img src="https://cdn-icons-png.flaticon.com/128/1177/1177491.png">
         </a>
-        <a href="www.linkedin.com/in/anchal-bhoite-692571260">
+        <a href="www.linkedin.com/in/anchal-bhoite">
           <img src="https://cdn-icons-png.flaticon.com/128/1384/1384072.png">
         </a>
         <a href="#">
           <img src="https://cdn-icons-png.flaticon.com/128/4923/4923005.png">
         </a>
         <a href="https://github.com/Anchalbhoite">
-          <img src="https://cdn-icons-png.flaticon.com/128/2111/2111425.png">
+          <img src="https://cdn-icons-png.flaticon.com/128/2504/2504911.png">
         </a>
       </div>
     </div>
