--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="#">
           <img src="https://cdn-icons-png.flaticon.com/128/1177/1177491.png">
         </a>
-        <a href="www.linkedin.com/in/anchal-bhoite">
+        <a href="https://www.linkedin.com/in/anchal-bhoite/">
           <img src="https://cdn-icons-png.flaticon.com/128/1384/1384072.png">
         </a>
         <a href="#">
