--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <a href="#">
         <img src="https://cdn-icons-png.flaticon.com/128/10091/10091904.png">
       </a>
-      <a href="www.linkedin.com/in/anchal-bhoite">
+      <a href="https://anchalbhoite.github.io/portfolio/#">
         <img src="https://cdn-icons-png.flaticon.com/128/11376/11376363.png">
       </a>
       <a href="#">
