--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <a href="#">
         <img src="https://cdn-icons-png.flaticon.com/128/10091/10091734.png">
       </a>
-      <a href="#">
+      <a href="https://anchalbhoite.github.io/portfolio/#">
         <img src="https://cdn-icons-png.flaticon.com/128/10091/10091904.png">
       </a>
       <a href="https://anchalbhoite.github.io/portfolio/#">
