--- a/about-us.html
+++ b/about-us.html
@@ -18,7 +18,7 @@
 
     <div class="container">
       <div class="width-50">
-        <img src="images/profile.jpeg" class="about-img">
+        <img src="images/profile.jpg" class="about-img">
       </div>
       <div class="width-50">
         <div class="about-us">
