--- a/project.html
+++ b/project.html
@@ -30,34 +30,28 @@
       <div class="width-50">
         <div class="project-list">
           <img src="https://cdn-icons-png.flaticon.com/128/6168/6168860.png">
-          <h3>Memory Game</h3><br>
-          <p>"Embark on a Journey of Mindful Fun with Our Memory Game Project!
-            Dive into the realm of cognitive entertainment with our engaging Memory Game project.
-            This interactive endeavor is designed to challenge and enhance your memory skills while providing an enjoyable gaming experience.
-             Whether you are a seasoned gamer or just starting. </p>
+          <h3>Forecasting diabetes onset prediction using ML</h3><br>
+          <p>This project aims to address this critical healthcare need by developing a machine learning-based system capable of predicting diabetes with high accuracy.  </p>
         
-        <a href="https://anchalbhoite.github.io/memory_game/">www.memory_game</a></div>
+        <a href="https://diabetesprediction-lnkr8gdpwkpysewfpjgxyn.streamlit.app/">DiabetesPredtiction.streamlit.app</a></div>
       </div>
       <div class="width-50">
         <div class="project-list">
           <img src="https://cdn-icons-png.flaticon.com/128/6794/6794639.png">
-          <h3>Birthday Wishes</h3><br>
-          <p>"Celebrate Life's Moments with Our Birthday Wishes Website! 🎉
-            our vibrant online platform dedicated to spreading joy and love on birthdays! Our Birthday Wishes 
-            website is your go-to destination for crafting heartfelt and personalized birthday messages for your loved ones.
+          <h3>Android Malware Detection Using Optimal Ensemble Learning</h3><br>
+          <p>📌 This project lies at the intersection of Machine Learning and Cybersecurity, and can be easily extended with a web interface (Flask/React) for real-time Android malware scanning.
           </p>
-          <a href="https://anchalbhoite.github.io/birthdaycard/"><b>www.birthdaywishes</b></a>
+          <a href="https://wanderlust-tnbo.onrender.com/"><b>https://wanderlust-tnbo.onrender.com/</b></a>
         </div>
       </div>
       <div class="width-50">
         <div class="project-list">
           <img src="https://cdn-icons-png.flaticon.com/128/4521/4521060.png">
-          <h3>Asking For A Date</h3><br>
-          <p>Discover Your Perfect Match with Our Asking for Date Website! 💑
+          <h3>Wanderlust – Full Stack Travel Blog </h3><br>
+          <p>Built a full-featured travel blogging platform from scratch. Integrated Mongoose for MongoDB operations, implemented authentication, express routers, form validations, and deployed the app. Frontend built using React with component lifecycle methods and Material UI.
   
-            Welcome to a digital space where connections flourish, and meaningful dates await. Our Asking for Date website is designed to make the process of expressing interest and securing that first date as smooth and enjoyable as possible.</p>
-          <a href="https://anchalbhoite.github.io/Date/"><b>www.gotodate
-          </b></a>
+          </p>
+          <a href="https://wanderlust-tnbo.onrender.com/"><b>https://wanderlust-tnbo.onrender.com/</b></a>
         </div>
       </div>
       <div class="width-50">
@@ -74,10 +68,9 @@
       <div class="width-50">
         <div class="project-list">
           <img src="https://cdn-icons-png.flaticon.com/128/3921/3921334.png">
-          <h3>Drum Kit</h3><br>
-          <p>"Dhol Baje" is an immersive drum kit project that combines traditional craftsmanship with cutting-edge technology. This unique endeavor seeks to create a
-             dynamic fusion between the rhythmic heritage of the dhol, a traditional Indian drum, and modern drumming innovation. </p>
-             <a href="https://anchalbhoite.github.io/Dhol-Baje/"><b>www.dholbaje</b></a>
+          <h3>Object Detection with Voice using YOLOv8</h3><br>
+          <p>Built a real-time object detection system using YOLOv8 and OpenCV that captures webcam input and announces detected objects via speech using pyttsx3. </p>
+             <a href="https://github.com/Anchalbhoite/object-detection-voice-yolo"><b>www.object-detection-voice-yolo</b></a>
         </div>
       </div>
     
@@ -103,3 +96,4 @@
     <div class="footer-sect mt-20 width-50">CopyRight © 2023 Anchal Bhoite Website Template. All Rights Reserved</div>
   </div>
 </div>
+
