--- a/project.html
+++ b/project.html
@@ -14,6 +14,7 @@
   </nav>
 </div>
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="main-section">
     <div class="container">
@@ -37,7 +38,7 @@
       </div>
       <div class="width-50">
         <div class="project-list">
-          <img src="https://cdn-icons-png.flaticon.com/128/6794/6794639.png">
+          <i class="fa-solid fa-shield-virus"></i>
           <h3>Android Malware Detection Using Optimal Ensemble Learning</h3><br>
           <p>📌 This project lies at the intersection of Machine Learning and Cybersecurity, and can be easily extended with a web interface (Flask/React) for real-time Android malware scanning.
           </p>
@@ -96,4 +97,5 @@
     <div class="footer-sect mt-20 width-50">CopyRight © 2023 Anchal Bhoite Website Template. All Rights Reserved</div>
   </div>
 </div>
+
 
