--- a/project.html
+++ b/project.html
@@ -13,6 +13,10 @@
     
   </nav>
 </div>
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -30,7 +34,8 @@
       </div>
       <div class="width-50">
         <div class="project-list">
-          <img src="https://cdn-icons-png.flaticon.com/128/6168/6168860.png">
+          <i class="fa-solid fa-stethoscope"></i>
+<i class="fa-solid fa-chart-line"></i>
           <h3>Forecasting diabetes onset prediction using ML</h3><br>
           <p>This project aims to address this critical healthcare need by developing a machine learning-based system capable of predicting diabetes with high accuracy.  </p>
         
@@ -47,7 +52,7 @@
       </div>
       <div class="width-50">
         <div class="project-list">
-          <img src="https://cdn-icons-png.flaticon.com/128/4521/4521060.png">
+          <i class="fas fa-plane-departure"></i>
           <h3>Wanderlust – Full Stack Travel Blog </h3><br>
           <p>Built a full-featured travel blogging platform from scratch. Integrated Mongoose for MongoDB operations, implemented authentication, express routers, form validations, and deployed the app. Frontend built using React with component lifecycle methods and Material UI.
   
@@ -68,7 +73,8 @@
       </div>
       <div class="width-50">
         <div class="project-list">
-          <img src="https://cdn-icons-png.flaticon.com/128/3921/3921334.png">
+          <i class="fa-solid fa-camera"></i>
+<i class="fa-solid fa-microphone"></i>
           <h3>Object Detection with Voice using YOLOv8</h3><br>
           <p>Built a real-time object detection system using YOLOv8 and OpenCV that captures webcam input and announces detected objects via speech using pyttsx3. </p>
              <a href="https://github.com/Anchalbhoite/object-detection-voice-yolo"><b>www.object-detection-voice-yolo</b></a>
@@ -97,5 +103,6 @@
     <div class="footer-sect mt-20 width-50">CopyRight © 2023 Anchal Bhoite Website Template. All Rights Reserved</div>
   </div>
 </div>
+
 
 
