--- a/about-us.html
+++ b/about-us.html
@@ -1,139 +1,105 @@
-<div class="width-33 logo">Port <span class="span-col">folio</span>
-</div>
-<div class="width-66">
-  <nav>
-    <a href="index.html">
-      <span class="span-col">Home</span>
-    </a>
-    <a href="about-us.html">About me</a>
-    <a href="education.html">Education</a>
-    <a href="project.html"> My Project</a>
-    <a href="contact.html">Contact me</a>
-    
-  </nav>
-</div>
-<div class="main-section bg-lightgrey">
+<head>
+  <!-----META SECTION----->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Anchal Bhoite | Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+</head>
+<body>
+  <div id="nav-placeholder"></div>
 
-    <div class="container">
-      <div class="width-50">
-        <img src="images/profile2.jpg" class="about-img">
-      </div>
-      <div class="width-50">
-        <div class="about-us">
-          <h2 class="heading-text">About Me</h2>
-          <h3></h3>
-          <p>Hi,I am Anchal Bhoite, From Hyderabad. I am a passionate and dedicated B.Tech student with a keen interest in technology and its transformative power. I am deeply passionate about web programming and Android development, where my fascination lies in crafting digital experiences.
-             My enthusiasm for problem-solving and innovation has driven me to actively engage in various projects and extracurricular activities, honing my skills.</p>
-        <div class="width-50 mt-20">
-          <table cellspacing="8" cellpadding="8">
-            <tr>
-              <th>Name:</th>
-              <td>Anchal Bhoite</td>
-            </tr>
-            <tr>
-              <th>Email:</th>
-              <td>anchalbhoite@gmail.com</td>
-            </tr>
-            <tr>
-              <th>contact number:</th>
-              <td>+91 9177235380</td>
-            </tr>
-            <tr>
-              <th>Education:</th>
-              <td> B.Tech in Computer Science & Engineering (Artificial Intelligence & Machine Learning)</td>
-            </tr>
-          </table>
-        </div>
-        <div class="width-50 mt-20">
-          <table cellspacing="8" cellpadding="8">
-            <tr>
-              <th>City:</th>
-              <td>Hyderabad,Telangana</td>
-            </tr>
-            
-          </table>
-        </div>
-      </div>
+<section class="about-section">
+  <div class="about-container">
+    <!-- Left side image -->
+    <div class="about-image">
+      <img src="images/profile2.jpg" alt="About Me">
+    </div>
+
+    <!-- Right side text -->
+    <div class="about-text">
+      <h2>About Me</h2>
+      <p>
+          Hi, I’m <b>Anchal Bhoite</b>, a passionate Computer Science Engineer specializing in
+          <b>Software Development, Full-Stack Web Development, and Machine Learning</b>. 
+          My journey in technology has been driven by curiosity and the desire to solve real-world problems using innovative solutions.
+        </p>
+        <p>
+          I have hands-on experience in building scalable applications, deploying AI/ML models, 
+          and working with modern technologies like <b>MERN stack, Java, Python, and Cloud tools</b>. 
+          With strong problem-solving skills, I enjoy challenges that push me to think critically and creatively.
+        </p>
+        <p>
+          Apart from technical skills, I am a team player and a quick learner who believes in continuous improvement. 
+          I have also led projects, coordinated with diverse teams, and contributed actively as a <b>Team Leader</b> in hackathons.
+        </p>
+        <p>
+          My goal is to contribute to impactful projects, grow as an SDE, and create technology that makes a difference.
+        </p>
+        <a href="https://drive.google.com/uc?export=download&id=1cUuojErvIhqM8Eso3RMc7VJf0MTqT2ze" 
+          class="btn-download" target="_blank" rel="noopener noreferrer">
+          Download Resume
+        </a>
+
     </div>
   </div>
-</div>
-<!------SKILL SECTION------>
-<div class="main-section">
+</section>
+
+
+<!-- Skills Section -->
+<section class="skills-section">
   <div class="container">
-    <h2 class="heading-text">My Skills</h2>
-    <div class="width-50">
+    <h2>My Skills</h2>
+    <div class="skills-grid">
       <div class="skill">
-        <b>C Programming</b>
-        <span>95%</span>
-        <div>
-          <span style="width:95%"></span>
-        </div>
+        <p>C Programming</p>
+        <div class="progress"><span style="width:95%"></span></div>
       </div>
       <div class="skill">
-        <b>Python Programming</b>
-        <span>91%</span>
-        <div>
-          <span style="width:91%"></span>
-        </div>
+        <p>Python</p>
+        <div class="progress"><span style="width:91%"></span></div>
       </div>
       <div class="skill">
-        <b>Java</b>
-        <span>85%</span>
-        <div>
-          <span style="width:85%"></span>
-        </div>
+        <p>Java</p>
+        <div class="progress"><span style="width:85%"></span></div>
       </div>
       <div class="skill">
-        <b>SQL</b>
-        <span>80%</span>
-        <div>
-          <span style="width:80%"></span>
-        </div>
+        <p>SQL</p>
+        <div class="progress"><span style="width:80%"></span></div>
       </div>
       <div class="skill">
-        <b>Kotlin </b>
-        <span>75%</span>
-        <div>
-          <span style="width:75%"></span>
-        </div>
+        <p>Kotlin</p>
+        <div class="progress"><span style="width:75%"></span></div>
       </div>
-    </div>
-    <div class="width-50">
-      <div class="width-50">
-        <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:95">HTML</div>
+      <div class="skill">
+        <p>HTML</p>
+        <div class="progress"><span style="width:95%"></span></div>
       </div>
-      <div class="width-50">
-        <div role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="--value:85">CSS</div>
+      <div class="skill">
+        <p>CSS</p>
+        <div class="progress"><span style="width:85%"></span></div>
       </div>
-      <div class="width-50">
-        <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:75">JAVASCRPIT</div>
+      <div class="skill">
+        <p>JavaScript</p>
+        <div class="progress"><span style="width:75%"></span></div>
       </div>
-      <div class="width-50">
-        <div role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="--value:55">BOOTSTRAP</div>
+      <div class="skill">
+        <p>Bootstrap</p>
+        <div class="progress"><span style="width:70%"></span></div>
       </div>
     </div>
   </div>
-</div>
-<!------FOOTER SECTION------>
-<div class="footer">
-  <div class="container">
-    <div class="footer-sect social-icon width-50">
-      <a href="#">
-        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091734.png">
-      </a>
-      <a href="#">
-        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091904.png">
-      </a>
-      <a href="www.linkedin.com/in/anchal-bhoite">
-        <img src="https://cdn-icons-png.flaticon.com/128/11376/11376363.png">
-      </a>
-      <a href="#">
-        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091784.png">
-      </a>
-    </div>
-    <div class="footer-sect mt-20 width-50">CopyRight © 2023 Anchal Bhoite Website Template. All Rights Reserved</div>
-  </div>
-</div>
+</section>
+
+ <div id="footer-placeholder"></div>
+
+  <script>
+    // Load Navbar + Footer
+    fetch("nav.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("nav-placeholder").innerHTML = data.split("</header>")[0] + "</header>";
+        document.getElementById("footer-placeholder").innerHTML = data.split("</header>")[1];
+      });
+  </script>
+</body>
   
