--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,13 @@
-<!-------------CONTACT US SECTION----------------------->
-<link rel="stylesheet" href="css/style.css">
-<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-<div class="width-33 logo">Port <span class="span-col">folio</span>
-</div>
-<div class="width-66">
-  <nav>
-    <a href="index.html">
-      <span class="span-col">Home</span>
-    </a>
-    <a href="about-us.html">About me</a>
-    <a href="education.html">Education</a>
-    <a href="project.html"> My Project</a>
-    <a href="contact.html">Contact me</a>
-    
-  </nav>
-</div>
+<head>
+  <!-----META SECTION----->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Anchal Bhoite | Portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <div id="nav-placeholder"></div>
+
 <div class="main-section contact bg-lightgrey">
     <div class="container">
       <h2 class="heading-text">Get In Touch</h2>
@@ -27,47 +20,36 @@
           <button type="submit">Submit</button>
         </form>
       </div>
-      <div class="width-33">
-        <h3>
-          <i class="fa fa-map-marker"></i>
-        </h3>
-        <h4>Address</h4>
-        <p>21-4-289 charmahal  peltabuz , Hyderabad-500064</p>
+      <div class="contact-info">
+        <div class="box">
+          <h3><i class="fa fa-map-marker"></i></h3>
+          <h4>Address</h4>
+          <p>21-4-289 charmahal peltabuz , Hyderabad-500064</p>
+        </div>
+        <div class="box">
+          <h3><i class="fa fa-phone"></i></h3>
+          <h4>Phone</h4>
+          <p>+91 9177235380</p>
+        </div>
+        <div class="box">
+          <h3><i class="fa fa-envelope-o"></i></h3>
+          <h4>Email</h4>
+          <p>anchalbhoite@gmail.com</p>
+        </div>
       </div>
-      <div class="width-33">
-        <h3>
-          <i class="fa fa-phone"></i>
-        </h3>
-        <h4>Phone</h4>
-        <p>+91 9177235380</p>
-      </div>
-      <div class="width-33">
-        <h3>
-          <i class="fa fa-envelope-o"></i>
-        </h3>
-        <h4>Email</h4>
-        <p>anchalbhoite@gmail.com</p>
-      </div>
+
     </div>
   </div>
-  <!------FOOTER SECTION------>
-<div class="footer">
-  <div class="container">
-    <div class="footer-sect social-icon width-50">
-      <a href="#">
-        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091734.png">
-      </a>
-      <a href="#">
-        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091904.png">
-      </a>
-      <a href="www.linkedin.com/in/anchal-bhoite">
-        <img src="https://cdn-icons-png.flaticon.com/128/11376/11376363.png">
-      </a>
-      <a href="#">
-        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091784.png">
-      </a>
-    </div>
-    <div class="footer-sect mt-20 width-50">CopyRight © 2023 Anchal Bhoite Website Template. All Rights Reserved</div>
-  </div>
-</div>
+ <div id="footer-placeholder"></div>
+
+  <script>
+    // Load Navbar + Footer
+    fetch("nav.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("nav-placeholder").innerHTML = data.split("</header>")[0] + "</header>";
+        document.getElementById("footer-placeholder").innerHTML = data.split("</header>")[1];
+      });
+  </script>
+</body>
     
