--- a/index.html
+++ b/index.html
@@ -1,81 +1,65 @@
- <!-----META SECTION----->
- <!DOCTYPE html>
- <html>
- <head>
- <title>Student Portfolio Website Template</title>
- <meta charset="utf-8">
- <meta name="viewport" content="width=device-width, initial-scale=1">
- 
- 
- <link rel="stylesheet" href="css/style.css">
- </head>
- <body>
-    <!-----MENU SECTION------>
-<div class="main-panel">
-    <div class="container">
-      <div class="width-33 logo">Port <span class="span-col">folio</span>
-      </div>
-      <div class="width-66">
-        <nav>
-          <a href="index.html">
-            <span class="span-col">Home</span>
-          </a>
-          <a href="about-us.html">About me</a>
-          <a href="education.html">Education</a>
-          <a href="project.html"> My Project</a>
-          <a href="contact.html">Contact me</a>
-          
-        </nav>
-      </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-----META SECTION----->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Anchal Bhoite | Portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <!-----NAVIGATION BAR------>
+  <header class="main-panel">
+    <div class="container nav-bar">
+      <div class="logo">Port <span class="span-col">folio</span></div>
+      <nav>
+        <a href="index.html" class="active">Home</a>
+        <a href="about-us.html">About</a>
+        <a href="education.html">Education</a>
+        <a href="project.html">Projects</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </div>
-<!------MAIN BANNERR------>
-<div class="container ">
-    <div class="width-50">
-      <div class="banner-section">
-        <span class="span-col">Welcome To My Portfolio</span>
-        <h1>Anchal <span class="span-col">Bhoite</span>
-        </h1>
-        <h2>- I'm a Engineering Student pursuing B.Tech in Computer Science & Engineering (Artificial Intelligence & Machine Learning) .</h2>
-        <a href="#">
-          <img src="https://cdn-icons-png.flaticon.com/128/2626/2626269.png">
-        </a>
-        <a href="#">
-          <img src="https://cdn-icons-png.flaticon.com/128/1177/1177491.png">
-        </a>
-        <a href="https://www.linkedin.com/in/anchal-bhoite/">
-          <img src="https://cdn-icons-png.flaticon.com/128/1384/1384072.png">
-        </a>
-        <a href="#">
-          <img src="https://cdn-icons-png.flaticon.com/128/4923/4923005.png">
-        </a>
-        <a href="https://github.com/Anchalbhoite">
-          <img src="https://cdn-icons-png.flaticon.com/128/2504/2504911.png">
-        </a>
+  </header>
+
+  <!------HERO / BANNER SECTION------>
+  <section class="hero container">
+    <div class="hero-text">
+      <span class="tagline">Welcome To My Portfolio</span>
+      <h1>Hi, I’m <span class="span-col">Anchal Bhoite</span></h1>
+      <h2>
+        Engineering Student | B.Tech in Computer Science & Engineering (AI & ML)  
+      </h2>
+      <div class="cta-buttons">
+        <a href="project.html" class="btn">View My Projects</a>
+        <a href="contact.html" class="btn-outline">Get in Touch</a>
+      </div>
+      <div class="social-links">
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/128/2626/2626269.png" alt="Email"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/128/1177/1177491.png" alt="Phone"></a>
+        <a href="https://www.linkedin.com/in/anchal-bhoite/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/128/1384/1384072.png" alt="LinkedIn"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/128/4923/4923005.png" alt="Portfolio"></a>
+        <a href="https://github.com/Anchalbhoite" target="_blank"><img src="https://cdn-icons-png.flaticon.com/128/2504/2504911.png" alt="GitHub"></a>
       </div>
     </div>
-    <div class="width-50">
-      <img src="images/about_us.jpeg">
+    <div class="hero-image">
+      <img src="images/image.jpg" alt="Profile Picture">
     </div>
-  </div>
-  </div>
+  </section>
+
   <!------FOOTER SECTION------>
-<div class="footer">
-  <div class="container">
-    <div class="footer-sect social-icon width-50">
-      <a href="#">
-        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091734.png">
-      </a>
-      <a href="https://www.linkedin.com/in/anchal-bhoite/">
-        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091904.png">
-      </a>
-      <a href="https://anchalbhoite.github.io/portfolio/#">
-        <img src="https://cdn-icons-png.flaticon.com/128/11376/11376363.png">
-      </a>
-      <a href="#">
-        <img src="https://cdn-icons-png.flaticon.com/128/10091/10091784.png">
-      </a>
+  <footer class="footer">
+    <div class="container footer-container">
+      <div class="social-icons">
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/128/10091/10091734.png" alt="Mail"></a>
+        <a href="https://www.linkedin.com/in/anchal-bhoite/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/128/10091/10091904.png" alt="LinkedIn"></a>
+        <a href="https://anchalbhoite.github.io/portfolio/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/128/11376/11376363.png" alt="Website"></a>
+        <a href="#"><img src="https://cdn-icons-png.flaticon.com/128/10091/10091784.png" alt="Contact"></a>
+      </div>
+      <p>© 2025 Anchal Bhoite | All Rights Reserved</p>
     </div>
-    <div class="footer-sect mt-20 width-50">CopyRight © 2023 Anchal Bhoite Website Template. All Rights Reserved</div>
-  </div>
-</div>
-  
+  </footer>
+
+</body>
+</html>
