--- a/project.html
+++ b/project.html
@@ -14,8 +14,20 @@
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
+<header class="main-panel">
+  <div class="container nav-bar">
+    <div class="logo">Port <span class="span-col">folio</span></div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about-us.html" >About</a>
+      <a href="education.html" >Education</a>
+      <a href="project.html" class="active">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
 <body>
-  <div id="nav-placeholder"></div>
+  
 
 <div class="main-section">
   <div class="container">
