--- a/education.html
+++ b/education.html
@@ -5,8 +5,20 @@
   <title>Anchal Bhoite | Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+<header class="main-panel">
+  <div class="container nav-bar">
+    <div class="logo">Port <span class="span-col">folio</span></div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about-us.html" >About</a>
+      <a href="education.html" class="active">Education</a>
+      <a href="project.html">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
 <body>
-  <div id="nav-placeholder"></div>
+  
 
   <!-- MAIN SECTION -->
   
