--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <span class="tagline">Welcome To My Portfolio</span>
       <h1>Hi, I’m <span class="span-col">Anchal Bhoite</span></h1>
       <h2>
-        Engineering Student | B.Tech in Computer Science & Engineering (AI & ML)  
+        Full-Stack Developer| Software Engineer | B.Tech in Computer Science & Engineering (AI & ML)  
       </h2>
       <div class="cta-buttons">
         <a href="project.html" class="btn">View My Projects</a>
